# word2vec-mt

./: .pylintrc  check_all.bat  check_all.sh  create_venv.bat  create_venv.sh  pyproject.toml  requirements.txt  requirements_dev.txt  test.py
data/: .gitignore  linear_hyperparams.json  skipgram_hyperparams.json  synonyms_mt.json  synonyms_mt_dev.json  synonyms_mt_test.json  synonyms_mt_val.json  translations_mten.json  translations_mten_dev.json  translations_mten_test.json  translations_mten_train.json  translations_mten_val.json
docs/source/: api.rst  conf.py  index.rst  usage.rst  word2vec_mt.rst
docs/source/word2vec_mt/: constants.rst  corpus_preprocessor.rst  data_downloader.rst  data_maker.rst  similar_word_data_maker_helper.rst  vocab_extractor.rst
docs/source/word2vec_mt/corpus_preprocessor/: buffer.rst  corpus_to_train_set.rst
output/: synonyms_mt.jsonl  synonyms_mt_dev.json  synonyms_mt_test.json  synonyms_mt_val.json  translations_mten.jsonl  translations_mten_dev.json  translations_mten_test.json  translations_mten_train.json  translations_mten_val.json  vocab_mt.txt
src/word2vec_mt/: constants.py  data_downloader.py  paths.py  similar_word_data_maker_helper.py  vocab_extractor.py
src/word2vec_mt/corpus_preprocessor/: __init__.py  buffer.py  corpus_to_train_set.py
src/word2vec_mt/data_maker/: __init__.py  data_splitter.py  entry.py  load_data.py  similar_word_data_maker_helper.py  user_input_logic.py
src/word2vec_mt/model/: __init__.py  data.py  evaluate.py  model.py  trainer.py  tuner.py
tools/: sphinx_api_doc_maker.py  validate_project.py
(+29 files in other folders)
